# MPUCalc

./: .gitmodules  README.md  cross.txt  makefile  memory_map.h  memory_map.yaml  memory_map_with_linker_symbols.yaml  meson.build
.github/workflows/: c-cpp.yml
cmsis/: atomic_intrinsics.h  cmsis_compiler.h  cmsis_gcc.h  core_cm7.h  cpu_m7.h  mpu_armv7.h
example/: device.ld  device.mk
inc/: range_vector.h
libyaml/src/: License  libyaml_api.c  libyaml_dumper.c  libyaml_emitter.c  libyaml_loader.c  libyaml_parser.c  libyaml_reader.c  libyaml_scanner.c  libyaml_writer.c  yaml_private.h
mpu_calc/: mpu_calc.cpp  readme_mpu_calc.md
scripts/: run_update_memory_map.sh
src/: configure_mpu.cpp  configure_mpu.h  dbg_log.h  memory_map.h  mpu_armv7.h  mpu_calculator.cpp  mpu_calculator.h  mpu_display.cpp  mpu_display.h  mpu_table.cpp  mpu_table.h  range_vector.h
test/errata/: expected_memory_map.h  memory_map.yaml  test.bats
test/syntax_errors/: test.bats
unit_test/: capture_and_compare.cpp  capture_and_compare.h  mpu_calculator_test.cpp
